# risc-v-emulator

./: CMakeLists.txt  README.md
cmake/: Toolchain-riscv.cmake
include/: emulator_api.h
src/: CMakeLists.txt  bus.c  bus.h  clint.c  clint.h  common.h  cpu.c  cpu.h  decode.c  decode.h  dts.c  dts.h  elf_load.c  elf_load.h  elf_selfuse.h  instructions.c  instructions.h  main.c  memory.c  memory.h  mmu.c  mmu.h  plic.c  plic.h  tick.c  tick.h  timer.c  timer.h  trap.c  trap.h  trap_vector.c  trap_vector.h  uart.c  uart.h  virtio_blk.c  virtio_blk.h
